# fdf

./: .env  .envrc  .gitignore  .pre-commit-config.yaml  .test.sh  Cargo.toml  Cross.toml  IMPROVEMENTS.md  README.md  TICKLIST.md  bigendian_strlen_tests.txt  build.rs  clippy_test.sh  const_str_benchmark.txt  const_strlen_benchmarks_macos.txt  fdf_benchmark.md  find_todos.sh  make_results_table.sh  perf.data  perf.data.old  recursive_symlink_fs_test.sh  results-warm-cache-no-pattern.md  rust-toolchain.toml  speed_benchmarks.txt  test_size_difference.sh  valgrind-test.sh
.devcontainer/: devcontainer.json
.github/workflows/: netbsd.yml  release-binaries.yml  rust.yml
benches/: dirent_bench.rs
fd_benchmarks/: BUG-WARNING-HYPERFINE.md  cold-cache-complex-search.sh  cold-cache-depth-test.sh  cold-cache-depth-test_home_dir.sh  cold-cache-file-extension.sh  cold-cache-file-extension_home_dir.sh  cold-cache-no-pattern.sh  cold-cache-no-pattern_home_dir.sh  cold-cache-relative-dir-test.sh  cold-cache-simple-pattern.sh  cold-cache-simple-pattern_home_dir.sh  cold-cache-size-negative-test.sh  cold-cache-size-positive-test.sh  cold-cache-size-test_home_dir.sh  cold-cache-size-test_negative_home_dir.sh  cold-cache-type-filtering-directory.sh  cold-cache-type-filtering-directory_home_dir.sh  cold-cache-type-filtering-empty.sh  cold-cache-type-filtering-empty_home_dir.sh  cold-cache-type-filtering-executable.sh  cold-cache-type-filtering-executable_home_dir.sh  config.sh  local_speed_tests.sh  new_prelude.sh  prelude.sh  results-cold-cache-simple-pattern.md  results-warm-cache-depth-test.md  results-warm-cache-file-extension.md  results-warm-cache-no-pattern.md  results-warm-cache-no-pattern_test.md  results-warm-cache-relative-dir-test.md  results-warm-cache-simple-pattern.md  results-warm-cache-type-filtering.md  results-warm-cache-type-filtering_empty.md  results-warm-cache-type-filtering_sl.md  run_all_tests_USE_ME.sh  syscalltest.sh  syscalltest_ignore.sh  testscript.sh  warm-cache-anomaly-test.sh  (+33 more)
fd_benchmarks/strace_outputs/: Case1_fd.txt  Case1_fdf.txt  Case2_fd.txt  Case2_fdf.txt  Case3_fd.txt  Case3_fdf.txt  _fdf.txt
research/: dirent_structs.txt  generate_dirents.sh
scripts/: find_todos.sh  make_results_table.sh  perf_run.sh  recursive_symlink_fs_test.sh  run_benchmarks.sh  test_buffer_sizes.sh  valgrind-test.sh
src/: buffer.rs  cli_helpers.rs  colour_macro.rs  config.rs  cursed_macros.rs  custom_types_result.rs  dirent_macro.rs  direntry.rs  direntry_filter.rs  direntry_tests.rs  error.rs  filetype.rs  finderbuilder.rs  glob.rs  iter.rs  lib.rs  macos_iter.rs  macros.rs  main.rs  memchr_derivations.rs  metadata.rs  osbytes.rs  pointer_conversion.rs  printer.rs  size_filter.rs  syscalls.rs  temp_dirent.rs  tempdirentry.rs  test.rs  traits_and_conversions.rs  type_config.rs  types.rs  utils.rs  windows_bindings.rs
src/filters/: file_type_filter.rs  mod.rs  size_filter.rs  time_filter.rs
src/fs/: buffer.rs  dir_entry.rs  file_type.rs  iter.rs  mod.rs  types.rs
src/util/: glob.rs  ignore.rs  memchr_derivations.rs  mod.rs  printer.rs  unique.rs  utils.rs
src/walk/: finder.rs  finder_builder.rs  mod.rs  types.rs
