[package]
name = "fdf"
version = "0.7.1"
rust-version = "1.87.0"
edition = "2024"
license = "MIT"
description = "A fast, multi-threaded filesystem search tool with regex/glob support and extremely pretty colours!"
documentation = "https://docs.rs/fdf"
repository = "https://github.com/alexcu2718/fdf"
keywords = ["search", "filesystem", "glob", "regex", "cli"]
categories = ["filesystem", "command-line-utilities", "concurrency"]

[build-dependencies]
libc = { version = "0.2.175" }

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["std"] }
clap = { version = "4.5.47", features = ["derive"] }
clap_complete = "4.5.55"
compile_time_ls_colours = "0.4.1"
dashmap = { version = "6.1.0", features = ["inline"] }
libc = { version = "0.2.175" }
rayon = "1.10.0"
regex = { version = "1.12.1", features = ["perf"] }
[target.'cfg(any(target_os = "linux",target_os="macos"))'.dependencies]
mimalloc = "0.1.43"


[dev-dependencies]
criterion = { version = "0.7.0", features = [
  "cargo_bench_support",
  "real_blackbox",
] }
filetime = "0.2"

[profile.dev]
opt-level = 0       
debug = true        
overflow-checks = true 
lto = false         
codegen-units = 16   
panic = "unwind"   
incremental = true   


[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false

[[bench]]
name = "dirent_bench"
harness = false
