[package]
name = "fdf"
version = "0.8.6"
rust-version = "1.90.0"
edition = "2024"
license = "MIT"
description = "A fast, multi-threaded filesystem search tool with regex/glob support and extremely pretty colours!"
documentation = "https://docs.rs/fdf"
repository = "https://github.com/alexcu2718/fdf"
keywords = ["search", "filesystem", "glob", "regex", "cli"]
categories = ["filesystem", "command-line-utilities", "concurrency"]


[build-dependencies]
libc = { version = "0.2.181" }
cc = "1.2.55"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["std"] }
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = "4.5.61"
compile_time_ls_colours = { version = "0.5.1", features = ["phf"] }
crossbeam-deque = "0.8.6"
crossbeam-channel = "0.5.14"
dashmap = { version = "6.1.0", features = ["inline"] }
libc = "0.2.181"
regex = { version = "1.12.2", features = ["perf"] }
thread_local = "1.1.9"
[target.'cfg(any(target_os = "linux",target_os="macos",target_os="android"))'.dependencies]
mimalloc = { version = "0.1.48", optional = true, features = [
  "extended",
] } #dont enable v3, it causes weird shit with extra syscalls.

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]
no-mimalloc = []


[dev-dependencies]
rand = "0.10.0"
env_home = "0.1.0" #due to deprecated homedir in stdlib
criterion = { version = "0.8.2", features = [
  "cargo_bench_support",
  "real_blackbox",
  "html_reports",
] }
filetime = "0.2"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
lto = false
codegen-units = 16
panic = "unwind"
incremental = true


[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false


[[bench]]
name = "dirent_bench"
harness = false


[package.metadata.cargo-allocation]
exclusive = true
